<resources>
    <string name="app_name">SwalisMarket</string>
    <string name="cart">Panier</string>
    <string name="home">Accueil</string>
    <string name="order">Commande</string>
    <string name="profile">Profile</string>
    <string name="continued_without_login">Continue sans se connecter</string>
    <string name="champs_btn_toLogin">Se Connecter</string>
    <string name="desc_photo">desc photos</string>
    <string name="champs_adremail_text">Addresse E-mail</string>
    <string name="champs_adremail_Hint">E-mail</string>
    <string name="champs_password_text">Mot de passe</string>
    <string name="champs_password_Hint">Mot de passe...</string>
    <string name="champs_btn_logIn">Se connecter</string>
    <string name="champs_forgetPassword">Oublier le mot de passe</string>
    <string name="field_name">Nom..</string>
    <string name="field_name_text">Nom:</string>
    <string name="field_family_name_text">Nom:</string>
    <string name="field_family_name">Nom...</string>
    <string name="field_first_name_text">"Prenom : "</string>
    <string name="field_date_born">Date de naissance</string>
    <string name="champs_btn_sign_up">S\'Incrire</string>
    <string name="champs_re_password_text">Reecrire Mot de passe</string>
    <string name="shopping_cart">Le Panier</string>
    <string name="log_out">Deconnecter</string>
    <string name="champs_new_password">Nouveau Mot de passe</string>
    <string name="save_btn">Sauvegarder</string>
    <string name="edit_btn">Editer</string>
    <string name="field_phone_user">tel :</string>
    <string name="field_location_user">Addresse</string>
</resources>